# serializer version: 1
# name: test_setup[sensor.bahnhofsstr_1a_heating-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.bahnhofsstr_1a_heating',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Heating',
    'platform': 'ista_ecotrend',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <IstaSensorEntity.HEATING: 'heating'>,
    'unique_id': 'eaf5c5c8-889f-4a3c-b68c-e9a676505762_heating',
    'unit_of_measurement': 'units',
  })
# ---
# name: test_setup[sensor.bahnhofsstr_1a_heating-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Bahnhofsstr. 1A Heating',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'units',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.bahnhofsstr_1a_heating',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '35',
  })
# ---
# name: test_setup[sensor.bahnhofsstr_1a_heating_cost-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.bahnhofsstr_1a_heating_cost',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': None,
    'original_name': 'Heating cost',
    'platform': 'ista_ecotrend',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <IstaSensorEntity.HEATING_COST: 'heating_cost'>,
    'unique_id': 'eaf5c5c8-889f-4a3c-b68c-e9a676505762_heating_cost',
    'unit_of_measurement': 'EUR',
  })
# ---
# name: test_setup[sensor.bahnhofsstr_1a_heating_cost-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'monetary',
      'friendly_name': 'Bahnhofsstr. 1A Heating cost',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'EUR',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.bahnhofsstr_1a_heating_cost',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '21',
  })
# ---
# name: test_setup[sensor.bahnhofsstr_1a_heating_energy-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.bahnhofsstr_1a_heating_energy',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.ENERGY: 'energy'>,
    'original_icon': None,
    'original_name': 'Heating energy',
    'platform': 'ista_ecotrend',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <IstaSensorEntity.HEATING_ENERGY: 'heating_energy'>,
    'unique_id': 'eaf5c5c8-889f-4a3c-b68c-e9a676505762_heating_energy',
    'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
  })
# ---
# name: test_setup[sensor.bahnhofsstr_1a_heating_energy-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Bahnhofsstr. 1A Heating energy',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.bahnhofsstr_1a_heating_energy',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '38.0',
  })
# ---
# name: test_setup[sensor.bahnhofsstr_1a_hot_water-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.bahnhofsstr_1a_hot_water',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.WATER: 'water'>,
    'original_icon': None,
    'original_name': 'Hot water',
    'platform': 'ista_ecotrend',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <IstaSensorEntity.HOT_WATER: 'hot_water'>,
    'unique_id': 'eaf5c5c8-889f-4a3c-b68c-e9a676505762_hot_water',
    'unit_of_measurement': <UnitOfVolume.CUBIC_METERS: 'm³'>,
  })
# ---
# name: test_setup[sensor.bahnhofsstr_1a_hot_water-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'water',
      'friendly_name': 'Bahnhofsstr. 1A Hot water',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': <UnitOfVolume.CUBIC_METERS: 'm³'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.bahnhofsstr_1a_hot_water',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1.0',
  })
# ---
# name: test_setup[sensor.bahnhofsstr_1a_hot_water_cost-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.bahnhofsstr_1a_hot_water_cost',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': None,
    'original_name': 'Hot water cost',
    'platform': 'ista_ecotrend',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <IstaSensorEntity.HOT_WATER_COST: 'hot_water_cost'>,
    'unique_id': 'eaf5c5c8-889f-4a3c-b68c-e9a676505762_hot_water_cost',
    'unit_of_measurement': 'EUR',
  })
# ---
# name: test_setup[sensor.bahnhofsstr_1a_hot_water_cost-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'monetary',
      'friendly_name': 'Bahnhofsstr. 1A Hot water cost',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'EUR',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.bahnhofsstr_1a_hot_water_cost',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '7',
  })
# ---
# name: test_setup[sensor.bahnhofsstr_1a_hot_water_energy-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.bahnhofsstr_1a_hot_water_energy',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.ENERGY: 'energy'>,
    'original_icon': None,
    'original_name': 'Hot water energy',
    'platform': 'ista_ecotrend',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <IstaSensorEntity.HOT_WATER_ENERGY: 'hot_water_energy'>,
    'unique_id': 'eaf5c5c8-889f-4a3c-b68c-e9a676505762_hot_water_energy',
    'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
  })
# ---
# name: test_setup[sensor.bahnhofsstr_1a_hot_water_energy-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Bahnhofsstr. 1A Hot water energy',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.bahnhofsstr_1a_hot_water_energy',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '57.0',
  })
# ---
# name: test_setup[sensor.bahnhofsstr_1a_water-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.bahnhofsstr_1a_water',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.WATER: 'water'>,
    'original_icon': None,
    'original_name': 'Water',
    'platform': 'ista_ecotrend',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <IstaSensorEntity.WATER: 'water'>,
    'unique_id': 'eaf5c5c8-889f-4a3c-b68c-e9a676505762_water',
    'unit_of_measurement': <UnitOfVolume.CUBIC_METERS: 'm³'>,
  })
# ---
# name: test_setup[sensor.bahnhofsstr_1a_water-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'water',
      'friendly_name': 'Bahnhofsstr. 1A Water',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': <UnitOfVolume.CUBIC_METERS: 'm³'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.bahnhofsstr_1a_water',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '5.0',
  })
# ---
# name: test_setup[sensor.bahnhofsstr_1a_water_cost-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.bahnhofsstr_1a_water_cost',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': None,
    'original_name': 'Water cost',
    'platform': 'ista_ecotrend',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <IstaSensorEntity.WATER_COST: 'water_cost'>,
    'unique_id': 'eaf5c5c8-889f-4a3c-b68c-e9a676505762_water_cost',
    'unit_of_measurement': 'EUR',
  })
# ---
# name: test_setup[sensor.bahnhofsstr_1a_water_cost-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'monetary',
      'friendly_name': 'Bahnhofsstr. 1A Water cost',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'EUR',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.bahnhofsstr_1a_water_cost',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '3',
  })
# ---
# name: test_setup[sensor.luxemburger_str_1_heating-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.luxemburger_str_1_heating',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Heating',
    'platform': 'ista_ecotrend',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <IstaSensorEntity.HEATING: 'heating'>,
    'unique_id': '26e93f1a-c828-11ea-87d0-0242ac130003_heating',
    'unit_of_measurement': 'units',
  })
# ---
# name: test_setup[sensor.luxemburger_str_1_heating-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Luxemburger Str. 1 Heating',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'units',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.luxemburger_str_1_heating',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '35',
  })
# ---
# name: test_setup[sensor.luxemburger_str_1_heating_cost-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.luxemburger_str_1_heating_cost',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': None,
    'original_name': 'Heating cost',
    'platform': 'ista_ecotrend',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <IstaSensorEntity.HEATING_COST: 'heating_cost'>,
    'unique_id': '26e93f1a-c828-11ea-87d0-0242ac130003_heating_cost',
    'unit_of_measurement': 'EUR',
  })
# ---
# name: test_setup[sensor.luxemburger_str_1_heating_cost-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'monetary',
      'friendly_name': 'Luxemburger Str. 1 Heating cost',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'EUR',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.luxemburger_str_1_heating_cost',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '21',
  })
# ---
# name: test_setup[sensor.luxemburger_str_1_heating_energy-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.luxemburger_str_1_heating_energy',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.ENERGY: 'energy'>,
    'original_icon': None,
    'original_name': 'Heating energy',
    'platform': 'ista_ecotrend',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <IstaSensorEntity.HEATING_ENERGY: 'heating_energy'>,
    'unique_id': '26e93f1a-c828-11ea-87d0-0242ac130003_heating_energy',
    'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
  })
# ---
# name: test_setup[sensor.luxemburger_str_1_heating_energy-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Luxemburger Str. 1 Heating energy',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.luxemburger_str_1_heating_energy',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '38.0',
  })
# ---
# name: test_setup[sensor.luxemburger_str_1_hot_water-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.luxemburger_str_1_hot_water',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.WATER: 'water'>,
    'original_icon': None,
    'original_name': 'Hot water',
    'platform': 'ista_ecotrend',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <IstaSensorEntity.HOT_WATER: 'hot_water'>,
    'unique_id': '26e93f1a-c828-11ea-87d0-0242ac130003_hot_water',
    'unit_of_measurement': <UnitOfVolume.CUBIC_METERS: 'm³'>,
  })
# ---
# name: test_setup[sensor.luxemburger_str_1_hot_water-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'water',
      'friendly_name': 'Luxemburger Str. 1 Hot water',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': <UnitOfVolume.CUBIC_METERS: 'm³'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.luxemburger_str_1_hot_water',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1.0',
  })
# ---
# name: test_setup[sensor.luxemburger_str_1_hot_water_cost-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.luxemburger_str_1_hot_water_cost',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': None,
    'original_name': 'Hot water cost',
    'platform': 'ista_ecotrend',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <IstaSensorEntity.HOT_WATER_COST: 'hot_water_cost'>,
    'unique_id': '26e93f1a-c828-11ea-87d0-0242ac130003_hot_water_cost',
    'unit_of_measurement': 'EUR',
  })
# ---
# name: test_setup[sensor.luxemburger_str_1_hot_water_cost-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'monetary',
      'friendly_name': 'Luxemburger Str. 1 Hot water cost',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'EUR',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.luxemburger_str_1_hot_water_cost',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '7',
  })
# ---
# name: test_setup[sensor.luxemburger_str_1_hot_water_energy-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.luxemburger_str_1_hot_water_energy',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.ENERGY: 'energy'>,
    'original_icon': None,
    'original_name': 'Hot water energy',
    'platform': 'ista_ecotrend',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <IstaSensorEntity.HOT_WATER_ENERGY: 'hot_water_energy'>,
    'unique_id': '26e93f1a-c828-11ea-87d0-0242ac130003_hot_water_energy',
    'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
  })
# ---
# name: test_setup[sensor.luxemburger_str_1_hot_water_energy-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Luxemburger Str. 1 Hot water energy',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.luxemburger_str_1_hot_water_energy',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '57.0',
  })
# ---
# name: test_setup[sensor.luxemburger_str_1_water-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.luxemburger_str_1_water',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.WATER: 'water'>,
    'original_icon': None,
    'original_name': 'Water',
    'platform': 'ista_ecotrend',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <IstaSensorEntity.WATER: 'water'>,
    'unique_id': '26e93f1a-c828-11ea-87d0-0242ac130003_water',
    'unit_of_measurement': <UnitOfVolume.CUBIC_METERS: 'm³'>,
  })
# ---
# name: test_setup[sensor.luxemburger_str_1_water-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'water',
      'friendly_name': 'Luxemburger Str. 1 Water',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': <UnitOfVolume.CUBIC_METERS: 'm³'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.luxemburger_str_1_water',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '5.0',
  })
# ---
# name: test_setup[sensor.luxemburger_str_1_water_cost-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.luxemburger_str_1_water_cost',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': None,
    'original_name': 'Water cost',
    'platform': 'ista_ecotrend',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <IstaSensorEntity.WATER_COST: 'water_cost'>,
    'unique_id': '26e93f1a-c828-11ea-87d0-0242ac130003_water_cost',
    'unit_of_measurement': 'EUR',
  })
# ---
# name: test_setup[sensor.luxemburger_str_1_water_cost-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'monetary',
      'friendly_name': 'Luxemburger Str. 1 Water cost',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'EUR',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.luxemburger_str_1_water_cost',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '3',
  })
# ---
